# score_inc_someip_gateway

./: .bazelrc  BUILD.bazel  MODULE.bazel  versions.json
.devcontainer/: devcontainer.json  install_certs.py  setup_grpc_deps.sh
certs/: rb_rootca_ecc_g01.crt  rb_rootca_rsa_g01.crt
examples/car_window_sim/: BUILD.bazel
examples/car_window_sim/config/: logging.json  mw_com_config.json
examples/car_window_sim/src/: car_window.cpp  car_window_controller.cpp
main/: index.html
main/architecture/: dec_someipgw_registration.html
main/requirements/: stakeholder.html
main/tc8_conformance/: requirements.html
pr-16/requirements/: stakeholder.html
pr-16/tc8_conformance/: requirements.html
pr-19/: index.html
pr-19/architecture/: dec_someipgw_registration.html
pr-19/requirements/: stakeholder.html
pr-19/tc8_conformance/: requirements.html
pr-27/: index.html
pr-27/architecture/: dec_someipgw_registration.html
pr-27/requirements/: stakeholder.html
pr-27/tc8_conformance/: requirements.html
pr-28/requirements/: stakeholder.html
pr-28/tc8_conformance/: requirements.html
pr-30/: index.html
pr-30/architecture/: dec_someipgw_registration.html
pr-30/requirements/: stakeholder.html
pr-30/tc8_conformance/: requirements.html
pr-39/: index.html
pr-39/architecture/: dec_someipgw_registration.html
pr-40/architecture/: dec_someipgw_registration.html
pr-40/requirements/: stakeholder.html
pr-40/tc8_conformance/: requirements.html
pr-41/: index.html
pr-41/architecture/: dec_someipgw_registration.html
pr-42/: index.html
pr-42/architecture/: dec_someipgw_registration.html
pr-43/: index.html
pr-43/architecture/: dec_someipgw_registration.html
pr-44/: index.html
pr-44/architecture/: dec_someipgw_registration.html
pr-44/requirements/: stakeholder.html
pr-44/tc8_conformance/: requirements.html
pr-45/architecture/: dec_someipgw_registration.html
pr-45/requirements/: stakeholder.html
pr-45/tc8_conformance/: requirements.html
pr-46/architecture/: dec_someipgw_registration.html
pr-46/requirements/: stakeholder.html
pr-46/tc8_conformance/: requirements.html
pr-47/architecture/: dec_someipgw_registration.html
pr-47/requirements/: stakeholder.html
pr-47/tc8_conformance/: requirements.html
pr-48/architecture/: dec_someipgw_registration.html
pr-48/requirements/: stakeholder.html
pr-48/tc8_conformance/: requirements.html
pr-49/architecture/: dec_someipgw_registration.html
pr-49/requirements/: stakeholder.html
pr-49/tc8_conformance/: requirements.html
src/gatewayd/: BUILD.bazel  remote_service_instance.cpp  remote_service_instance.h
src/gatewayd/etc/: gatewayd_config.json  logging.json  mw_com_config.json
src/gatewayd/kuksa_broker_feeder/: BUILD.bazel  collector_client.cc  collector_client.h  create_datapoint.h  data_broker_feeder.cc  data_broker_feeder.h  simple_log.h
src/rbc/: BUILD.bazel  car_lock_unlock_service.h
src/someipd/: BUILD.bazel  main.cpp
src/someipd/etc/: logging.json  mw_com_config.json
tests/integration/: vsomeip-local.json  vsomeip.json
tests/integration/sample_client/: sample_client.cpp  vsomeip.json
