# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@score_docs_as_code//:docs.bzl", "docs")
load("@score_tooling//:defs.bzl", "copyright_checker", "dash_license_checker", "use_format_targets")
load("//:project_config.bzl", "PROJECT_CONFIG")

# ==============================================================================
# Compliance & Licensing
# ==============================================================================

copyright_checker(
    name = "copyright",
    srcs = [
        "src",
        "tests",
        "//:BUILD.bazel",
        "//:MODULE.bazel",
    ],
    config = "@score_tooling//cr_checker/resources:config",
    template = "@score_tooling//cr_checker/resources:templates",
    visibility = ["//visibility:public"],
)

dash_license_checker(
    src = "//examples:cargo_lock",
    file_type = "",
    # Auto-detected from project_config.
    project_config = PROJECT_CONFIG,
    visibility = ["//visibility:public"],
)

# ==============================================================================
# Code Formatting
# ==============================================================================

use_format_targets()

# ==============================================================================
# Documentation
# ==============================================================================

docs(
    source_dir = "docs",
)

# ==============================================================================
# Python Dependencies
# ==============================================================================

# Run `bazel run //:python_requirements.update` to update the lock file.
compile_pip_requirements(
    name = "python_requirements",
    env_inherit = [
        "HTTP_PROXY",
        "HTTPS_PROXY",
        "no_proxy",
    ],
    requirements_txt = "python_requirements_lock.txt",
)

generate_someip_config_bin(
    name = "gatewayd_config_bin_gen",
    json = "//src/gatewayd/etc:gatewayd_config.json",
    output = "gatewayd_config.bin",
)

exports_files([
    "gatewayd_config.json",
    "gatewayd_config.fbs",
    "gatewayd_config.schema.json",
])

platform(
    name = "aarch64-linux-gcc_12.2.0-posix-direct",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
        "@score_bazel_platforms//version:gcc_12.2.0",
        "@score_bazel_platforms//runtime_es:posix",
    ],
    visibility = ["//visibility:public"],
)
